contact stack query

--- a/css/style.css
+++ b/css/style.css
@@ -2663,3 +2663,27 @@ button[type="submit"] {
     display:none;
   }
 }
+
+@media only screen and (max-width: 1234px) {
+
+  section.contact-cta {
+    padding-top: 136px;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+
+.c2-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    float: none;
+    padding-bottom: 40px;
+}
+
+.c2-container form {
+  padding-left: 0;
+}
+}
