--- a/css/style.css
+++ b/css/style.css
@@ -825,11 +825,12 @@ padding:20px;
 }
 
 .pref-test2 {
-  display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      width: 50%;
-padding-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-top: 20px;
 }
 
 .pref-test p {
